@@ -10,7 +10,7 @@ JSON = 2.5
 URI = 1.56
 IO::All = 0.41
 String::Truncate = 1.100570
-POE::Component::FeedAggregator = 0.900
+POE::Component::FeedAggregator = 0.902
 WWW::Shorten = 3.02
 WWW::Shorten::Bitly = 1.14
 Text::Trim = 1.02
